--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,7 +2,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  background: url("../images/bg.jpg");
+  background: url("../images/bg-4.jpg");
   background-size: cover; 
   background-repeat: no-repeat;
   background-attachment: fixed;
