--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,8 @@
 html {
     width: 100vw;
     height: 100 vh;
-    background: url("../images/bg-2.jpg");
-    background-size: cover; 
-    background-repeat: no-repeat;
+    background: url("../images/bg-5.jpg");
+    background-repeat: repeat;
     background-attachment: fixed;
     background-position: center;
 }
