--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,9 @@
 html {
     width: 100vw;
     height: 100 vh;
-    background: url("../images/bg-6.jpg");
-    background-repeat: repeat;
+    background: url("../images/bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
 }
