--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,7 @@ html {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  overflow-x: hidden;
 }
 body {
   margin: 1rem;
