--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.dark.css';
 :root {
   --background-body: #fff;
   --background: #efefef;
@@ -8,19 +9,13 @@
   --form-placeholder: #949494;
   --form-text: #000;
 }
-html {
-  width: 100vw;
-  height: 100vh;
-  background: url("../images/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  overflow-x: hidden;
+.sider-margins {
+  margin-left: 0;
 }
-body {
-  margin: 1rem;
-  padding: 1rem;
+@media (min-width: 992px) {
+  .sider-margins {
+    margin-left: 200px;
+  }
 }
 .write-T {
   stroke-dasharray: 300;
