update markdown styles and added bio

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,3 +6,15 @@ html, body {
   @apply bg-custom-darkest;
   @apply text-dracula-dark-200;
 }
+
+@layer base {
+  ul, ol {
+    list-style: revert;
+    margin: revert;
+    padding: revert;
+  }
+}
+
+a:hover {
+    text-decoration: underline;
+}
