--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind variants;
 
 html, body {
   @apply bg-custom-darkest;
@@ -13,8 +14,4 @@ html, body {
     margin: revert;
     padding: revert;
   }
-}
-
-a:hover {
-    text-decoration: underline;
 }
